authentication and swagger setup

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://innovate:12345@localhost:5434/todo?schema=public"
+ACCESS_SECRET="CONFUSE ALL THE MAD PEOPLE"
+REFRESH_SECRET="CONSOLE WITH THE MAD PEOPLE"
